[FIX] mail: plain-text messages word-wrap in Discuss UI
When a user sends a plaintext email to a mail-enabled channel, the
rendering of this message in Discuss have present a horizontal scroll
when the text contains long sentences.

This commit fixes it by enabling wrapping of the line's word to fit its
container size and prevent horizontal scrolling.

Note: the required CSS rules were already present since odoo/odoo@0e7e18ff71f3b490522358fa689ada7635dcd26a
but a wrapper element (with the class `.o_thread_message_content`) was
introduced in odoo/odoo@4685e4bc7f19f964697bf0dbd7dfdf254b6c5628 and
merged between the testing of the fix above and its actual merging in the
Odoo codebase, making it ineffective. We only have to properly re-enable
it.

opw-2341485

Related task ID: 34931

X-original-commit: a8b64a74ef5575b783d1b314616f0a89bdce3732

--- a/addons/mail/static/src/scss/thread.scss
+++ b/addons/mail/static/src/scss/thread.scss
@@ -160,10 +160,9 @@
             min-width: 0;
             max-width: 100%;
             word-wrap: break-word;
-            > pre {
+            .o_thread_message_content > pre {
                 white-space: pre-wrap;
                 word-break: break-word;
-                text-align: justify;
             }
 
             .o_mail_note_title {
